build: add package eslint-find-rules

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ext .js .",
-    "lint:fix": "eslint --fix --ext .js ."
+    "lint:fix": "eslint --fix --ext .js .",
+    "unused:js": "eslint-find-rules --unused ./js.js",
+    "unused:node": "eslint-find-rules --unused ./node.js",
+    "unused:ts": "eslint-find-rules --unused ./ts.js"
   },
   "repository": {
     "type": "git",
@@ -24,9 +27,12 @@
   },
   "homepage": "https://github.com/lunjs/eslint-config#readme",
   "peerDependencies": {
-    "eslint": "^7.25.0"
+    "eslint": "^7.27.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "eslint-find-rules": "^3.6.1",
     "eslint-plugin-node": "^11.1.0"
   }
 }
