--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
   },
   "homepage": "https://github.com/lunjs/eslint-config#readme",
   "peerDependencies": {
-    "eslint": "^8.1.0"
+    "eslint": "^8.2.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint-find-rules": "^4.0.0",
     "eslint-plugin-node": "^11.1.0"
   }
 }
