--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
   },
   "homepage": "https://github.com/gulujs/eslint-config#readme",
   "peerDependencies": {
-    "eslint": "^8.16.0"
+    "eslint": "^8.27.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.25.0",
-    "@typescript-eslint/parser": "^5.25.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "eslint": "^8.27.0",
     "eslint-find-rules": "^4.1.0",
-    "eslint-plugin-node": "^11.1.0"
+    "eslint-plugin-node": "^11.1.0",
+    "typescript": "^4.8.4"
   }
 }
