--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   "scripts": {
     "lint": "eslint --ext .js .",
     "lint:fix": "eslint --fix --ext .js .",
-    "unused:js": "eslint-find-rules --unused ./js/index.js",
-    "unused:node": "eslint-find-rules --unused ./js/node.js",
-    "unused:ts": "eslint-find-rules --unused ./ts/index.js"
+    "unused:js": "eslint-find-rules --unused ./js.js",
+    "unused:ts": "eslint-find-rules --unused ./ts.js"
   },
   "repository": {
     "type": "git",
@@ -32,14 +31,13 @@
   },
   "homepage": "https://github.com/gulujs/eslint-config#readme",
   "peerDependencies": {
-    "eslint": "^8.27.0"
+    "eslint": "^8.53.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
-    "eslint": "^8.27.0",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "eslint": "^8.53.0",
     "eslint-find-rules": "^4.1.0",
-    "eslint-plugin-node": "^11.1.0",
-    "typescript": "^4.8.4"
+    "typescript": "^5.2.2"
   }
 }
